--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "pora-my-first-app-trdin"
+rootProject.name = "NotesApp"
 include ':app'
