--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity android:name=".InputTaskActivity" />
+        <activity android:name=".AboutActivity" />
     </application>
 
 </manifest>
