--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,10 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.5'
 
+    implementation 'org.apache.commons:commons-io:1.3.2'
+
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
 
     //implementation 'androidx.appcompat:appcompat:1.3.1'
 
