--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         </activity>
         <activity android:name=".InputTaskActivity" />
         <activity android:name=".AboutActivity" />
+        <activity android:name=".SettingsActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
