--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-process:2.5.1"
     implementation "androidx.lifecycle:lifecycle-common:2.5.1"
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //noinspection GradleCompatible
+   //implementation 'com.android.support:recyclerview-v7:28.0.0'
+
 
     //implementation 'androidx.appcompat:appcompat:1.3.1'
 
